--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "craco-less": "^1.6.0",
+    "faker": "^5.5.3",
     "less-plugin-npm-import": "^2.1.0",
+    "moment": "^2.29.1",
+    "node-jose": "^2.1.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
@@ -29,5 +32,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/faker": "^5.5.9",
+    "@types/node-jose": "^1.1.10"
+  }
 }
